@@ -15,6 +15,8 @@ Revision history for Date-Easy
       `subtract_minutes`, `add_hours`, `subtract_hours`, `add_days`,
       `subtract_days`, `add_weeks`, `subtract_weeks`, `subtract_months`,
       `add_years`, `subtract_years`
+    * New class: Date::Easy::Units
+      simpler interface for date math
 
     [Docs]
     * Added "Language" section to "Limitations"
